+ galerei, +hom, aktualizacii

--- a/Meždurečensk.mw
+++ b/Meždurečensk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Meždurečenskan lidnanznam
  | Flag text = Meždurečenskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 97,895
- | Voz' = 2017
+ | Eläjiden lugu = 96,088
+ | Voz' = 2021
  | Pind = 332.56
  | Fail = Mezhdurechensk.jpg
- | Pämez' = Sergei Kislicin<br />(keväz'ku 2015—)
+ | Pämez' = Vladimir Černov<br />(reduku 2018—)
  | Telefonkod = +7-38475-xx-xxx
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1946 kuti ''Ol'žeras-žilo'' (nimitihe jogen mödhe) samha [[kivihil'|kivihil't]]. Kätihe žilod da saudud türmatud mehil eländpunktad lidnaks vn 1955 23. päiväl kezakud, nimitihe nügüdläižikš geografižen sijadusen mödhe kahten jogen keskes ({{lang-ru|между реками}}).
 
-Meždurečensk šingotase kivihilen samižel (5 kaivut, sidä kesken järed «Raspadskai», i 5 kar'jerad) i 5 küllästamižfabrikal, [[kuld]]an samižel, kohenduzmehanižel Tomusinskii-tegimel i sömtegimištol (leibänkombinat, oludtegim i jomižed, mineraline vezi), mugažo [[suksed|mägisuksiden]] turizmal.
+Meždurečensk šingotase kivihilen samižel (viž kaivut, sidä kesken järed «Raspadskai», i viž kar'jerad) i videl küllästamižfabrikal, [[kuld]]an samižel, kohenduzmehanižel Tomusinskii-tegimel i sömtegimištol (leibänkombinat, oludtegim i jomižed, mineraline vezi), mugažo [[suksed|mägisuksiden]] turizmal.
 
 == Geografijan andmused ==
 Lidn om 25 km pitte, sijadase pidust' [[Tom' (Obin ližajogi)|Tomin]] oiktad randad tobjimalaz i sen oiktan Us-ližajogen ({{lang-ru|Уса́}}) hural randal tobjimalaz, 240 m ü.m.t. keskmäižel korktusel, om ümbärtud mägirajonil. Matkad [[Kemerovo]]hosai om 225 km lodeheze orhal, 300 km avtol vai raudtedme. Meždurečensk mülüb [[Novokuzneck]]an lidnaglomeracijha (1,15 mln rist. vl 2010). Lähembaine lidn om [[Miski]] 15 km päivlaskmha.
@@ -27,9 +27,30 @@ Lidn om 25 km pitte, sijadase pidust' [[Tom' (Obin ližajogi)|Tomin]] oiktad ran
 Üks'toštkümne pen't žilod mülüdas lidnümbrikho Meždurečenskan ližaks, alištudas koumele territorialižele ohjandusele. Lidnümbrikon pind — 7322,9 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 101 678 ristitud, lidnümbrikon — 103 946 ristitud. Kaikiš suremb lidnan ristitišt oli 108 tuh. eläjid vll 1991−1993. Vl 2018 kaik 99 025 ristitud elädas lidnümbrikos. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume jumalanpertid da kaks' časounäd oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 101 678 ristitud, lidnümbrikon — 103 946 ristitud. Kaikiš suremb lidnan ristitišt oli 108 tuh. eläjid vll 1991−1993. Vl 2018 kaik 99 025 ristitud elihe lidnümbrikos.
 
-Meždurečenskan kaivudensauvondtehnikum om professionaližen opendusen aluzkundaks.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume jumalanpertid<ref>[http://sobory.ru/geo/locat/14868 Meždurečenskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> da kaks' časounäd oma olmas lidnas.
+
+Meždurečenskan kaivudensauvondtehnikum<ref>[http://мгст.рф/ Meždurečenskan kaivudensauvondtehnikuman sait (''мгст.рф'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+Edeline lidnümbrikon pämez' om Sergei Kislicin (keväz'ku 2015 — sügüz'ku 2018).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Мемориал шахтёрской славы (Междуреченск).jpg|Kaivajiden hoštusen memorial (2010)
+Часовня (08.2011) - panoramio.jpg|Ortodoksižen hristanuskondan časoun' lidnümbrikos, vn 2011 nägu
+|
+|
+Шахта Распадская.jpg|Raspadskai-kaivuden tulend vl 1984
+|
+|
+|
+Междуреченск 2.jpg|L-serijan puruvedim-muštnik
+|
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://sndmo.ru/ Lidnümbrikon Rahvahan Ezitajiden Nevondkundan oficialine sait (''sndmo.ru'').] {{ref-ru}}
