--- a/Meždurečensk.mw
+++ b/Meždurečensk.mw
@@ -39,14 +39,13 @@ Edeline lidnümbrikon pämez' om Sergei Kislicin (keväz'ku 2015 — sügüz'ku 
 <gallery mode="packed" heights="125px">
 Мемориал шахтёрской славы (Междуреченск).jpg|Kaivajiden hoštusen memorial (2010)
 Часовня (08.2011) - panoramio.jpg|Ortodoksižen hristanuskondan časoun' lidnümbrikos, vn 2011 nägu
-|
-|
+Mezhdurechensk, Kemerovo Oblast, Russia - panoramio (5).jpg|Lidnan puišt (2014)
 Шахта Распадская.jpg|Raspadskai-kaivuden tulend vl 1984
-|
-|
-|
+Mining equipment in Mezhdurechensk.jpg|Hilen kar'jer lidnümbrikos vl 2006
+Mezhdurechensk, Kemerovo Oblast, Russia - panoramio.jpg|Kul'turkeskuz (2014)
+Mezhdurechensk, Kemerovo Oblast, Russia - panoramio (9).jpg|«Avrora»-torguimižbobuštuzkeskuz (2014)
 Междуреченск 2.jpg|L-serijan puruvedim-muštnik
-|
+Междуреченск 1.jpg|Meždurečensk-raudtestancijan nägu
 </gallery>
 
 == Homaičendad ==
