+ galerei, +hom, aktualizacii

--- a/Mariinsk.mw
+++ b/Mariinsk.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Mariinskan lidnanznam
  | Flag text =
  | Valdkund = Venäma
- | Eläjiden lugu = 39,031
- | Voz' = 2017
+ | Eläjiden lugu = 37,786
+ | Voz' = 2021
  | Pind = 57.2
  | Fail = Mariinsk (15405744145).jpg
  | Pämez' = Vladimir Bobrov<br />(heinku 2012—)
@@ -14,14 +14,14 @@
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Mariinsk''' ({{lang-ru|Мариинск}}) om [[Venäma]]n lidn da lidnankund [[Kemerovon agj]]an pohjoižes. Se om [[Mariinskan rajon]]an administrativine keskuz.
+'''Mariinsk''' ({{lang-ru|Марии́нск}}) om [[Venäma]]n lidn da lidnankund [[Kemerovon agj]]an pohjoižes. Se om [[Mariinskan rajon]]an administrativine keskuz.
 
 == Istorii ==
 Ende čuliman totarlaižed elihe lidnan sijas. Vl 1698 venälaižed paniba ''Kijskoje-žilon'' alust Moskvan počtantraktal. Vl 1856 žilo sai lidnan statusad.
 
-Vl 1857 udesnimitihe Kijskoje-lidnad [[Aleksandr II Päzutai|Aleksandr II]]-imperatoran Marija Aleksandrovna-akad (1824−1880) oiktastuseks. [[Transsib]] läbiti lidnad 19. voz'sadan lopus, saudihe raudtesildad joges päliči vl 1895. Ortodoksižen hristanuskondan ph. Mikulai-čudonsädajan päjumalanpert' i kaumžoman puine časoun', katoline i judaizman pühäpertid oliba lidnas ende. Om kaičenus äi torgovanoiden kivižid pertid.
+Vl 1857 udesnimitihe Kijskoje-lidnad [[Aleksandr II Päzutai|Aleksandr II]]-imperatoran Marija Aleksandrovna-akad (1824−1880) oiktastuseks. [[Transsib]] läbiti lidnad 19. voz'sadan lopus, saudihe raudtesildad joges päliči vl 1895. Ortodoksižen hristanuskondan ph. Mikulai-čudonsädajan päjumalanpert' (om udessündutadud toižel sijal vodele 2007) i kaumžoman puine časoun', katoline i judaizman pühäpertid oliba lidnas ende. Om kaičenus äi torgovanoiden kivižid pertid.
 
-Lidn šingotase raudten edheotandoil i turizmal, [[etilspirt]]an tehmine i alkogoližiden jomižiden kaks' tegint ratas. Transsibirin kivivoinveim om saudud lidnanno.
+Mariinsk šingotase raudten edheotandoil i turizmal, [[etilspirt]]an tehmine i alkogoližiden jomižiden kaks' tegint ratas. Transsibirin kivivoinveim om saudud lidnanno.
 
 == Geografijan andmused ==
 Lidn sijadase Kii-jogen ({{lang-ru|Кия}}) hural randal ([[Čulim (Obin ližajogi)|Čuliman]] hura ližajogi), 130 m ü.m.t. keskmäižel korktusel. Reljef om tazo. Matkad [[Kemerovo]]hosai om 141 km suvipäivlaskmha orhal, 168 km avtol vai 225 km raudtedme. Lähembaine lidn om [[Anžero-Sudžensk]] 110 km päivlaskmha orhal, 145 km avtotedme vai Trassibadme.
@@ -31,7 +31,19 @@ Mariinsk om lidnankundan üks'jäine eländpunkt.
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 40 526 ristitud, rajonan seičeme kümnendest. Ristitišton lugu vajehtab 39..43 tuh. eläjid röunoiš vspäi 1959 (43 000 rist. vl 2003).
 
-Mariinskan politehnine tehnikum om professionaližen opendusen aluzkundaks.
+Mariinskan politehnine tehnikum<ref>[http://marptex.ru/ Mariinskan politehnižen tehnikuman sait (''marptex.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Mariinsk Town Museum.jpg|Lidnan muzei vl 2011
+Мариинск, Храм Анастасии Узорешительницы.jpg|Anastasija-sol'menpätajan jumalanpert', vn 2017 nägu
+Мариинский ЛВЗ, 2.jpg|Mariinskan likörvintegim vl 2017
+Poludintsev Shop Mariinsk.jpg|Lauk vl 2011 (ende Poludincev-torgovanan lauk)
+Жд вокзал - panoramio (6).jpg|Mariinsk-päraudtestancijan sauvuz vl 2014
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.gorod-mariinsk.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''gorod-mariinsk.ru'').] {{ref-ru}}
