--- a/Neižne.mw
+++ b/Neižne.mw
@@ -3,6 +3,11 @@
 
 Vaumiž naimiželole neižne kucuse ''neičeižeks''. Jänu naimiželota naine om ''vanh neižne''.
 
+== Neiččehe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Neižne ei ole kaži, iknaspäi ed taci.''
+</blockquote>
+
 == Kacu mugažo ==
 * [[Neičukaine]]
 * [[Priha]]
