/* Kažihe sidodud vepsän virkehed, muštatišed da ozoitesed */ +

--- a/Kaži.mw
+++ b/Kaži.mw
@@ -36,23 +36,24 @@ Lihansöjad živatad, södas mugažo [[maid]]od da maidproduktoid. Lipitadas noz
 Pul'san paksuz — 110..140 iškendad minutas, hengaiduz — 16..40 südäimehehengahtust minutas. Hibjan lämuz +38,6 C°. Veren koume gruppad om olmas: A, B i AB.
 
 == Kažihe sidodud vepsän virkehed, muštatišed da ozoitesed ==
-;Virkehed
+=== Virkehed ===
 * kadonu kaži joksi heiden keskes
 * kažihe da hirhe väta
 * kažikoncert
 * kažinhändan alle
 * kuti koir da kaži
 
-;Muštatišed
+=== Muštatišed ===
 <blockquote>
 * ''Den'goid kuti kažil kündlid.''
 * ''Kažin nagr, a hiren voik.''
 * ''Kažita hired i pän södas.''
 * ''Kodirandal da eskai kažid oma čomarožaižed.''
+* ''Neižne ei ole kaži, iknaspäi ed taci.''
 * ''Nukkujale (Magadajale) kažile hir' suhu ei tule.''
 </blockquote>
 
-;Ozoitez
+=== Ozoitez ===
 <blockquote>
 Ukoine libub päčile, korond perskes (kaži)
 </blockquote>
