--- a/Variš.mw
+++ b/Variš.mw
@@ -29,6 +29,7 @@ Eläb Evropas i Päivlaskmaižes Azijas, sinantropine erik. Hibj om hahk, pä, s
 == Varišha sidotud vepsän muštatišed ==
 <blockquote>
 * ''Kohtha vaiše variš lendab.''
+* ''Näl'ghižele mehele i variš om mel'he.''
 * ''Ozaiteled haragole, a painad varišale.''
 * ''Variš hüppib, a küksta ei voi.'' (ristitus, ken tahtoib tehta pahut, no ei voi)
 * ''Variš varišale ei sil'mad n'oki.''
