/* Veneheze sidodud vepsän muštatišed */ +

--- a/Veneh.mw
+++ b/Veneh.mw
@@ -12,6 +12,7 @@ Nügüd'aigan ottas kävutamižhe venehid samha lebud, kalanpüdandan täht, tom
 <blockquote>
 * ''Aig andab tünen meren, aig — vodajan venehen.''
 * ''Mehel om mela kädes, venehen jumal veb.''
+* ''Sapkoiden omblii om kaiken sapkata, lačnik — lačuta, a venehnik — veneheta.''
 * ''Verhas venehes kaikušti om enamb kalad.''
 </blockquote>
 
