/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -41,6 +41,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Mel't-se ei möskekoi.''
 * ''Mez' nimel ei elä, a radol.''
 * ''Orjale polušk, radnikale poltin, mastarile rubl'.''
+* ''Sapkoiden omblii om kaiken sapkata, lačnik — lačuta, a venehnik — veneheta.''
 * ''Seibhid eile, ka aid vereb.''
 * ''Tervhut ed osta.''
 * ''Verhan vargastad, ičeiž kadotad.''
