--- a/Openduz.mw
+++ b/Openduz.mw
@@ -101,6 +101,7 @@ Britanine joganedal'ne [[The Economist]]-lehtez kirjuti [[Vikipedii|Vikipedijan]
 * ''Ed luge — ed ni openda.''
 * ''Ei koir ujumaha opete händad ligotamata.''
 * ''Igän eläd, igän openud.''
+* ''Ken opendase, se i mahtaškandeb.''
 * ''Maman openduz — kündushesai.''
 * ''Midä noren opendad, sidä vanhan muštad.''
 * ''Min norelaz opendatoi, sen rauhemba mahtad.''
