/* Sömhä sidodud vepsän muštatišed da ozoitesed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -12,7 +12,7 @@ Jagadas sömid augotižlibundan mödhe: [[kazmused|kazmusišpäi]] i [[živatad|
 Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid, fizižid redustoitajid substancijoid, kucujid läžundoid mikroorganizmoid (bakterijad, parazitad, virusad). Joga sömäl kožundan strok om olmas.
 
 == Sömhä sidodud vepsän muštatišed da ozoitesed ==
-;Muštatišed
+=== Muštatišed ===
 <blockquote>
 * ''Andoi jumal sun, andab sömäd-ki (supalan-ki).''
 * ''Ei i car' kuldad sö.''
@@ -36,6 +36,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Midä ei sögoi, sidä i laudale ei togoi.''
 * ''Mitte samine, mugoi i sömine.''
 * ''Nagrižpirgas eile sömäd, nekrutas eile oluhad.''
+* ''Om pök söb seičeme sömäd, toine pök söb ühten sömän i se penikaižen.''
 * ''Rad radon sijas, a sönd — söndan sijas.''
 * ''Sapkoid kuluta ed — mustikašt sö ed.''
 * ''Sö čomad lent i pida čomad mel't.''
@@ -46,7 +47,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Tämbäi ed sö tulebid leibid.''
 </blockquote>
 
-;Ozoitez
+=== Ozoitez ===
 <blockquote>
 * Söb, söb, ei voi kül'düda. (lämoi)
 </blockquote>
