/* Seičeme-lugusanha sidodud vepsän muštatiž */ +

--- a/7_(lugu).mw
+++ b/7_(lugu).mw
@@ -9,9 +9,10 @@ Lugetas seičemed ozavaks luguks [[Päivlaskmma]]n kul'turoiš. Mainitase [[Bibl
 * 2<sup>7</sup> = 128
 * 7<sub>10</sub> = 111<sub>2</sub> = 21<sub>3</sub> = 13<sub>4</sub> = 12<sub>5</sub> = 11<sub>6</sub> = 10<sub>7</sub> = 7<sub>8(da sen edemba)</sub>.
 
-== Seičeme-lugusanha sidodud vepsän muštatiž ==
+== Seičeme-lugusanha sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ojatin lapsed seičemen üht ei varaikoi.''
+* ''Om pök söb seičeme sömäd, toine pök söb ühten sömän i se penikaižen.''
 </blockquote>
 
 == Homaičendad ==
