/* Üks'-lugusanha sidodud vepsän muštatišed da ozoitesed */

--- a/1_(lugu).mw
+++ b/1_(lugu).mw
@@ -17,7 +17,7 @@ Miččen taht lugun äikerdoičend ühteks andab sidä-žo lugud, jagamine ühte
 * ''Hüvä vaza kaht emid imeb, a paha ühten-ki kadotab.''
 * ''Kaks' kondjad ühtes pezas ei voigoi eläda.''
 * ''Ojatin lapsed seičemen üht ei varaikoi.''
-* ''Om pök söb seičeme sömäd, toine pök söb ühten sömän i se penikaižen.''
+* ''Om pök söb seičeme sömäd, toine pök söb ühten sömän i sen penikaižen.''
 * ''Pu ei lankte ühtel painandal.''
 * ''Üht päd ei voi sötta.''
 * ''Ühtel sijal i kivi kazvahtub.''
