*Empty MediaWiki Message*

--- a/7_(lugu).mw
+++ b/7_(lugu).mw
@@ -12,7 +12,7 @@ Lugetas seičemed ozavaks luguks [[Päivlaskmma]]n kul'turoiš. Mainitase [[Bibl
 == Seičeme-lugusanha sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ojatin lapsed seičemen üht ei varaikoi.''
-* ''Om pök söb seičeme sömäd, toine pök söb ühten sömän i se penikaižen.''
+* ''Om pök söb seičeme sömäd, toine pök söb ühten sömän i sen penikaižen.''
 </blockquote>
 
 == Homaičendad ==
