*Empty MediaWiki Message*

--- a/Söm.mw
+++ b/Söm.mw
@@ -36,7 +36,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Midä ei sögoi, sidä i laudale ei togoi.''
 * ''Mitte samine, mugoi i sömine.''
 * ''Nagrižpirgas eile sömäd, nekrutas eile oluhad.''
-* ''Om pök söb seičeme sömäd, toine pök söb ühten sömän i se penikaižen.''
+* ''Om pök söb seičeme sömäd, toine pök söb ühten sömän i sen penikaižen.''
 * ''Rad radon sijas, a sönd — söndan sijas.''
 * ''Sapkoid kuluta ed — mustikašt sö ed.''
 * ''Sö čomad lent i pida čomad mel't.''
