/* Üks'-lugusanha sidodud vepsän muštatišed da ozoitesed */ +

--- a/1_(lugu).mw
+++ b/1_(lugu).mw
@@ -26,6 +26,7 @@ Miččen taht lugun äikerdoičend ühteks andab sidä-žo lugud, jagamine ühte
 * ''Ühtespäi kaht ei linne.'' (ala anda vaudad lapsele)
 * ''Ühthe korvha mäneb, toižespäi lähteb.''
 * ''Üks' päskhaine kezad ei tege.''
+* ''Üks' su i nagrab i itke.''
 </blockquote>
 
 === Ozoitesed ===
