/* Nagrha sidodud vepsän muštatišed */ +

--- a/Nagr.mw
+++ b/Nagr.mw
@@ -10,6 +10,7 @@ Nagr oli [[ristitunvuiččed oblezjanad|ristitunvuiččiden oblezjanoiden]] i ri
 * ''Ehtal itkend, homencel nagrand.''
 * ''Kažin nagr, hiren voik.''
 * ''Om paremb kacta nagrajan suhu, mi itkijan.''
+* ''Üks' su i nagrab i itke.''
 </blockquote>
 
 == Homaičendad ==
