--- a/Ristitun_hibj.mw
+++ b/Ristitun_hibj.mw
@@ -7,6 +7,8 @@ Ristitun hibjas erištadas [[pä]]d, [[kagl]]ad, [[hibjrung]]od, [[käzi|ülä-]
 == Ristitun hibjaha sidotud vepsän muštatišed ==
 <blockquote>
 * ''Astud, ka sil'mäd avaida, a su saupta.''
+* ''Miččen kobr kändab, mugoman i hibj kandab.''
+* ''Pidaiži sil'mile olda edes i tagan.''
 * ''Ülemba päd korvad ei kazgoi.''
 </blockquote>
 
