/* Kädehe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Käzi.mw
+++ b/Käzi.mw
@@ -37,6 +37,7 @@ Sikš ku käzivarz' enamb toižid elimid tegeb ristitun elonradmižen aigan, ka 
 * ''Käzi käden pezeb, blöd blödan katab.''
 * ''Käzi pit'k, ulotub kaiktäna.''
 * ''Mehel om mela kädes, venehen jumal veb.''
+* ''Miččen kobr kändab, mugoman i hibj kandab.''
 * ''Ota kädehe dai tedištad.''
 * ''Otajan käzi ei surdu, a andajan surdub.''
 * ''Sil'mad varaitas, käded ratas.''
