--- a/Sana.mw
+++ b/Sana.mw
@@ -13,6 +13,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Čoma sana i kivehe reigun tegeb.''
 * ''Ei sur' sana sud haugoi.''
 * ''Kaiked tot akale ala sanu.''
+* ''Kurdhele kaks' kerdad ei sanugoi.''
 * ''Neičukaine rodiše, i paginaine zavodiše.''
 * ''Paha kel' pahan i pagižeb.''
 * ''Pahal ristitul mugomad i paginad.''
