/* Kädehe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Käzi.mw
+++ b/Käzi.mw
@@ -43,6 +43,7 @@ Sikš ku käzivarz' enamb toižid elimid tegeb ristitun elonradmižen aigan, ka 
 * ''Sil'mad varaitas, käded ratas.''
 * ''Verhad käded hüväd, a ei olgoi südäimen mödhe.''
 * ''Ühtel kädel droči, toižel lö.''
+* ''Ühten käden pezed, toine iče pezese.''
 </blockquote>
 
 === Ozoitez ===
