--- a/Učulm.mw
+++ b/Učulm.mw
@@ -1,7 +1,7 @@
 [[Fail:Затон Лименда, Котлас (6).JPG|thumbnail|250px|Limend-učulm [[Kotlas]]as ([[Venäma]]).]]
 '''Učulm''' (vai '''abai''') om pen' [[laht]] (londuseline vai ratud<ref name="korabel">[http://www.korabel.ru/dictionary/detail/535.html ЗАТОН — Meritärtusiden vajehnik ''korabel.ru''-saital.] {{ref-ru}}</ref>), [[jogi|jogen]] vai [[järv]]en pala läz randad hillänke joksmusenke<ref>[http://dic.academic.ru/dic.nsf/ushakov/802602 ЗАВОДЬ. — ''Dic.academic.ru''.] {{ref-ru}}</ref>. Učulmod oma kaitud jälikumižespäi<ref>[http://www.classes.ru/all-russian/russian-dictionary-encycl-term-21292.htm ЗАТОН — Современный толковый словарь изд. «Большая Советская Энциклопедия» (onlain-versii) « Русский язык « ''Classes.ru''.]</ref>.
 
-Kävutase kut astijiden seižundtaho (tal'ven aigan), sen paloin, astijiden kohendusen täht.<ref name="korabel"/>
+Kävutase kut astijiden seižundtaho (tal'ven aigan), sen paloin, astijiden kohendusen täht<ref name="korabel"/>.
 
 == Kacu mugažo ==
 * [[Lagun]]
