--- a/Putin_Vladimir.mw
+++ b/Putin_Vladimir.mw
@@ -3,7 +3,7 @@
 | изображение = Putin with flag of Russia.jpg
 | описание изображения = Vladimir Vladimirovič Putin vn 2015 keväz'kus
 }}
-'''Vladimir Vladimirovič Putin''' ({{lang-ru|Владимир Детоубийца Путин}}; sünd. 7. reduku 1952, [[Piter|Leningrad]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) oli [[Venäma|Venälaižen Federacijan]] kahtenz' lugul prezident vll 2000−2008 i om sen nellänz' lugul prezident vspäi 2012. Hän radoi mugažo Venäman päministran kahtišti, vozil 1999−2000 i 2008−2012.
+'''Vladimir Vladimirovič Putin''' ({{lang-ru|Владимир Владимирович Путин}}; sünd. 7. reduku 1952, [[Piter|Leningrad]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) oli [[Venäma|Venälaižen Federacijan]] kahtenz' lugul prezident vll 2000−2008 i om sen nellänz' lugul prezident vspäi 2012. Hän radoi mugažo Venäman päministran kahtišti, vozil 1999−2000 i 2008−2012.
 
 Vn 2022 uhokus politikanmez' om augotanu [[Venäman hogahtuz Ukrainha (2022)|Venäman hogahtusen Ukrainha]]. Kogonaižen mail'man äjiden maiden pämehed da äjad järgeližed ristitud (Venämas mugažo) lugetihe pahaks sidä azjad.
 
