--- a/Jankulov_Stojan.mw
+++ b/Jankulov_Stojan.mw
@@ -1,9 +1,9 @@
 {{Personalii
 | изображение = Elitsa TODOROVA and Stoyan YANKOULOV.jpg
 }}
-'''Stojan Jankulov''' ({{lang-bg|Стоян Янкулов}}; sünd. [[10. sügüz'ku]] [[1966]], [[Sofii]], [[Bolgarii]]) om [[bolgarijalaižed|bolgarijalaine]] barabananvändai i [[perkussionist]].
+'''Stojan Jankulov''' ({{lang-bg|Стоян Янкулов}}; sünd. [[10. sügüz'ku]] [[1966]], [[Sofii]], [[Bolgarii]]) om [[bolgarijalaižed|bolgarijalaine]] muzikant i pajoiden kirjutai, barabananvändai i [[perkussionist]].
 
-Ühtmudel [[Jelica Todorova]]nke ezini Bolgarijan [[Evrovizii-2013]]-konkursal «[[Samo šampioni]]»-pajonke.
+Mez' zavodi muzikkar'jerad vl 1990 i jätktab sidä tähäsai. Ühtmudel [[Jelica Todorova]]nke hän ezini Bolgarijad [[Evrovizii-2013]]-konkursal «[[Samo šampioni]]»-pajonke («Vaiše čempionad», 12. sija pol'finalas). Jankulov ezineb valdkundad möst vn 2022 Evrovizijan pajokonkursal Intelligent Music Project-gruppan mülükundas «Intention»-pajonke.
 
 == Homaičendad ==
 <references />
