--- a/Jankulov_Stojan.mw
+++ b/Jankulov_Stojan.mw
@@ -1,9 +1,11 @@
 {{Personalii
 | изображение = Elitsa TODOROVA and Stoyan YANKOULOV.jpg
 }}
-'''Stojan Jankulov''' ({{lang-bg|Стоян Янкулов}}; sünd. [[10. sügüz'ku]] [[1966]], [[Sofii]], [[Bolgarii]]) om [[bolgarijalaižed|bolgarijalaine]] muzikant i pajoiden kirjutai, barabananvändai i [[perkussionist]].
+'''Stojan Jankulov''' ({{lang-bg|Стоян Янкулов}}; sünd. [[10. sügüz'ku]] [[1966]], [[Elin Pelin (lidn)|Elin Pelin]]-lidn, [[Sofijan agj]], [[Bolgarii]]) om [[bolgarijalaižed|bolgarijalaine]] muzikant i pajoiden kirjutai, barabananvändai i [[perkussionist]].
 
-Mez' zavodi muzikkar'jerad vl 1990 i jätktab sidä tähäsai. Ühtmudel [[Jelica Todorova]]nke hän ezini Bolgarijad [[Evrovizii-2013]]-konkursal «[[Samo šampioni]]»-pajonke («Vaiše čempionad», 12. sija pol'finalas). Jankulov ezineb valdkundad möst vn 2022 Evrovizijan pajokonkursal Intelligent Music Project-gruppan mülükundas «Intention»-pajonke.
+Noressai mez' ühtni ansamblihe barabananvändajaks. Om pästnus Muzikškolaspäi Lübomir Pipkovan nimed (Sofii). Lopi opendust Valdkundaližes muzikakademijas Pančo Vladigerovan nimed bangsoitoiden klassas. Jankulov radoi Bolgarijan nacionaližen radion bigbendas. Vändab rok- i džazkollektivoidenke, fol'kloransamblidenke, džazrok- i fjužn-muzikgruppidenke.
+
+Mez' zavodi muzikkar'jerad vl 1990 i jätktab sidä tähäsai. Ühtmudel [[Jelica Todorova]]nke hän ezini Bolgarijad [[Evrovizii-2007]]-konkursal, otiba vident sijad «Water»-pajonke i saiba rahvahidenkeskešt tetabut, sid' [[Evrovizii-2013]]-konkursal «[[Samo šampioni]]»-pajonke («Vaiše čempionad», 12. sija pol'finalas). Jankulov ezineb valdkundad möst vn 2022 Evrovizijan pajokonkursal Intelligent Music Project-gruppan mülükundas «Intention»-pajonke.
 
 == Homaičendad ==
 <references />
@@ -15,4 +17,3 @@ Mez' zavodi muzikkar'jerad vl 1990 i jätktab sidä tähäsai. Ühtmudel [[Jelic
 [[Kategorii:Barabananvändajad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Evrovizijan ühtnijad]]
-[[Kategorii:Sündnuded Sofijha]]
