--- a/Jankulov_Stojan.mw
+++ b/Jankulov_Stojan.mw
@@ -1,5 +1,6 @@
 {{Personalii
 | изображение = Elitsa TODOROVA and Stoyan YANKOULOV.jpg
+| описание изображения = Stojan Jankulov i Jelica Todorova Bolgarijan valičemižkonkursan aigan Evrovizijan täht vl 2007
 }}
 '''Stojan Jankulov''' ({{lang-bg|Стоян Янкулов}}; sünd. [[10. sügüz'ku]] [[1966]], [[Elin Pelin (lidn)|Elin Pelin]]-lidn, [[Sofijan agj]], [[Bolgarii]]) om [[bolgarijalaižed|bolgarijalaine]] muzikant i pajoiden kirjutai, barabananvändai i [[perkussionist]].
 
