--- a/.gd.mw
+++ b/.gd.mw
@@ -1,3 +1,4 @@
+[[Fail:DotGD domain logo (custom).svg|thumb|right|250px|Domenan logotip]]
 '''.gd''' om [[Grenad]]an [[DNS|Internet-domen]]. Se om avaitud [[1992. voz'|1992]]-nden voden 3. päiväl kezakud.<ref>[http://iana.org/domains/root/db/gd.html IANA — .gd Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
 == Homaičendad ==
@@ -6,6 +7,7 @@
 == Irdkosketused ==
 * [http://www.nic.gd/ Domenan sait (''nic.gd'').] {{ref-en}}, ohjandai om «The National Telecommunications Regulatory Commission», NTRC ''(Nacionaline regulätorine laudkund telekommunikacijoiden mödhe, ntrc.gd)''
 * [http://iana.org/domains/root/db/gd.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.gd}}
 
 {{CcTLD}}
 
