--- a/.gd.mw
+++ b/.gd.mw
@@ -1,6 +1,14 @@
 [[Fail:DotGD domain logo (custom).svg|thumb|right|250px|Domenan logotip]]
 '''.gd''' om [[Grenad]]an [[DNS|Internet-domen]]. Se om avaitud [[1992. voz'|1992]]-nden voden 3. päiväl kezakud.<ref>[http://iana.org/domains/root/db/gd.html IANA — .gd Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
+Äi vot domen oli kävutamata. Vll 2007−2013 AdamNames-kompanii edeni domenad da registrirui siš. Vn 2013 kevädespäi registracijan oiktused oma anttud Grenadan tobmudele.
+
+Registracii om lasktud kahtendel tazopindal oikti. Sab registriruidas i personoile, i verazmalaižile rezidencijata.
+
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.gov.gd''' — valdkundaližed organad
+* '''.net.gd''' — Internet-provaiderad, verkoihe sidodud kompanijad.
+
 == Homaičendad ==
 <references />
 
