--- a/.ba.mw
+++ b/.ba.mw
@@ -1,11 +1,21 @@
-'''.ba''' om [[Bosnii da Gercegovin|Bosnijan da Gercegovinan]] [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 14. päiväl elokud.<ref>[http://iana.org/domains/root/db/ba.html IANA — .ba Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.ba''' om [[Bosnii da Gercegovin|Bosnijan da Gercegovinan]] [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 14. päiväl elokud<ref>[http://iana.org/domains/root/db/ba.html IANA — .ba Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Läz 15 tuhad domennimid oli registriruidud .ba-zonas vl 2015.
+
+Registracii om lasktud kahtendel tazopindal oikti i koumandel tazopindal kahtenden tazopindan domenoiden rives. Olend vai ezitai valdkundas om tarbhaine domennimen registracijan täht.
+
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.org.ba''' — kommertižetomad organizacijad
+* '''.net.ba''' — telekommunikacijoiden provaiderad
+* '''.edu.ba''' — opendusen aluzkundad
+* '''.gov.ba''' — valdkundaližed organad
+* '''.mil.ba''' — sodainfrastruktur.
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://www.nic.ba/ Domenan sait (''nic.ba'')], ohjandai om «Univerzitetski tele-informatički centar» ''(UTIC)'' Sarajevo-lidnas. {{ref-bs}} {{ref-en}}
+* [http://www.nic.ba/ Domenan sait (''nic.ba'')], ohjandai om «Univerzitetski tele-informatički centar» ''(UTIC)'' [[Sarajevo]]-lidnas. {{ref-bs}} {{ref-en}}
 * [http://iana.org/domains/root/db/ba.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.ba}}
 
 {{CcTLD}}
 
