Tühjitadud toižetuz 148515, kudamban tegi 182.0.208.47 (arutelu) - another language

--- a/Olimpižed_vändod.mw
+++ b/Olimpižed_vändod.mw
@@ -22,289 +22,7 @@ Vspäi 1960 keratas Kezaližid [[Paralimpižed vändod|Paralimpižid vändoid]],
 * [[Universiad]]
 
 == Homaičendad ==
-{| class="wikitable"
-!Añu
-!Eventu
-! colspan="2" |See
-! colspan="6" rowspan="9" |
-|-
-! colspan="4" |Xuegos Olímpicos de Branu
-|-
-!1896
-|I edición
-|Atenes
-|Grecia
-|-
-!1900
-|II edición
-|París
-|Francia
-|-
-!1904
-|III edición
-|Saint Louis
-|Estaos Xuníos d'América
-|-
-!''1906''
-|''Xuegos Intercalaos''
-|''Atenes''
-| ''Grecia''
-|-
-!1908
-|IV edición
-|Londres
-|Reinu Xuníu
-|-
-!1912
-|V edición
-|Estocolmu
-|Suecia
-|-
-!1916
-|VI edición
-|Berlín
-|Alemaña
-|-
-| colspan="4" |<small>Suspendíos pola Primer Guerra Mundial</small>
-! rowspan="7" |
-!Añu
-!Eventu
-! colspan="2" |See
-! rowspan="53" |
-|-
-!1920
-|VII edición
-|Amberes
-|Bélxica
-! colspan="4" |Xuegos Olímpicos d'Iviernu
-|-
-!1924
-|VIII edición
-|París
-|Francia
-!1924
-|I edición
-|Chamonix
-| Francia
-|-
-!1928
-|IX edición
-|Ámsterdam
-|Países Baxos
-!1928
-|II edición
-|Sankt Moritz
-| Suiza
-|-
-!1932
-|X edición
-|Los Angeles
-|Estaos Xuníos d'América
-!1932
-|III edición
-|Lake Placid
-| Estaos Xuníos d'América
-|-
-!1936
-|XI edición
-|Berlín
-|Alemaña
-!1936
-|IV edición
-|Garmisch-Partenkirchen
-| Alemaña
-|-
-!1940
-|XII edición
-|Ḥélsinki
-|Finlandia
-!1940
-|V edición
-|Garmisch-Partenkirchen
-| Alemaña
-|-
-| colspan="9" |<small>Suspendíos pola Segunda Guerra Mundial</small>
-|-
-!1944
-|XIII edición
-|Londres
-|Reinu Xuníu
-!
-!1944
-|VI edición
-|Cortina d'Ampezzo
-| Italia
-|-
-| colspan="9" |<small>Suspendíos pola Segunda Guerra Mundial</small>
-|-
-!1948
-|XIV edición
-|Londres
-|Reinu Xuníu
-! rowspan="19" |
-!1948
-|VII edición
-|Sankt Moritz
-| Suiza
-|-
-!1952
-|XV edición
-|Ḥélsinki
-|Finlandia
-!1952
-|VIII edición
-|Oslu
-| Noruega
-|-
-!1956
-|XVI edición
-|Melbourne
-|Australia
-!1956
-|IX edición
-|Cortina d'Ampezzo
-| Italia
-|-
-!1960
-|XVII edición
-|Roma
-|Italia
-!1960
-|X edición
-|Squaw Valley
-| Estaos Xuníos d'América
-|-
-!1964
-|XVIII edición
-|Tokiu
-|Xapón
-!1964
-|XI edición
-|Innsbruck
-| Austria
-|-
-!1968
-|XIX edición
-|Ciudá de Méxicu
-|Méxicu
-!1968
-|XII edición
-|Grenoble
-| Francia
-|-
-!1972
-|XX edición
-|Múnich
-|Alemaña
-!1972
-|XIII edición
-|Sapporo
-| Xapón
-|-
-!1976
-|XXI edición
-|Montréal
-|Canadá
-!1976
-|XIV edición
-|Innsbruck
-| Austria
-|-
-!1980
-|XXII edición
-|Moscú
-|XRSS
-!1980
-|XV edición
-|Lake Placid
-| Estaos Xuníos d'América
-|-
-!1984
-|XXIII edición
-|Los Angeles
-|Estaos Xuníos d'América
-!1984
-|XVI edición
-|Sarayevu
-| Bosnia y Herzegovina
-|-
-!1988
-|XXIV edición
-|Seúl
-|Corea del Sur
-!1988
-|XVII edición
-|Calgary
-| Canadá
-|-
-!1992
-|XXV edición
-|Barcelona
-|España
-!1992
-|XVIII edición
-|Albertville
-| Francia
-|-
-!1996
-|XXVI edición
-|Atlanta
-|Estaos Xuníos d'América
-!1994
-|XIX edición
-|Lillehammer
-| Noruega
-|-
-!2000
-|XXVII edición
-|Sydney
-|Australia
-!1998
-|XX edición
-|Nagano
-| Xapón
-|-
-!2004
-|XXVIII edición
-|Atenes
-|Grecia
-!2002
-|XXI edición
-|Salt Lake City
-| Estaos Xuníos d'América
-|-
-!2008
-|XXIX edición
-|Beixín
-|China
-!2006
-|XXII edición
-|Torino
-| Italia
-|-
-!2012
-|XXX edición
-|Londres
-|Reinu Xuníu
-!2010
-|XXIII edición
-|Vancouver
-| Canadá
-|-
-!2016
-|XXXI edición
-|Rio de Janeiro
-|Brasil
-!2014
-|XXIV edición
-|Sochi
-| Rusia
-|-
-!2020
-|XXXII edición
-|Tokiu
-|Xapón
-|}
+<references/>
 
 == Irdkosketused ==
 * [http://www.olympic.org/ Rahvahidenkeskeižen olimpižen komitetan oficialine sait (''olympic.org'').] {{ref-en}}
