--- a/Bagaman_Sariden_flag.mw
+++ b/Bagaman_Sariden_flag.mw
@@ -1,10 +1,18 @@
 [[Fail:Flag of the Bahamas.svg|border|right|250px]]
 '''Bagaman Sariden flag''' ({{lang-en|Flag of the Bahamas}}) om [[Bagaman Sariden Ühtnend]]an üks' oficialižiš simvolišpäi. Flagan proporcii om ''1:2''.
 
-Nügüdläine flag om vahvištadud [[1973]]-nden voden 10. päiväl heinkud. Sädi Harvis Bein.
+Nügüdläine flag om vahvištadud [[1973]]-nden voden 10. päiväl heinkud. Sädi Harvis Bein (''Dr. Hervis Bain'').
 
 == Ümbrikirjutand ==
 Must oigedsaumnik tazostadud polidenke huralpäi simvolizuruib bagamalaižiden ühtmut da rohktust. Koume lapakoiktad šoidud oma tazostadud levedusenke, ned ozutadas sariden londuseližid arvoimižid: kuldaine šoid keskuzpalas om kuivma, kaks' akvamariništ šoidud ülähän i alahan — ümbärdai meri.
+
+== Meriflagad ==
+<gallery>
+Civil Ensign of the Bahamas.svg|Civiližiden astjoiden flag
+Civil Jack of the Bahamas.svg|Civiližiden astjoiden güis
+Naval Ensign of the Bahamas.svg|Sodameriflag
+Government Ensign of the Bahamas.svg|Sodamerivägiden abuastjoiden flag
+</gallery>
 
 == Kacu mugažo ==
 * [[Bagaman Sariden valdkundznam]]
