--- a/Bagaman_Sariden_flag.mw
+++ b/Bagaman_Sariden_flag.mw
@@ -7,11 +7,11 @@ Nügüdläine flag om vahvištadud [[1973]]-nden voden 10. päiväl heinkud. Sä
 Must oigedsaumnik tazostadud polidenke huralpäi simvolizuruib bagamalaižiden ühtmut da rohktust. Koume lapakoiktad šoidud oma tazostadud levedusenke, ned ozutadas sariden londuseližid arvoimižid: kuldaine šoid keskuzpalas om kuivma, kaks' akvamariništ šoidud ülähän i alahan — ümbärdai meri.
 
 == Meriflagad ==
-<gallery>
-Civil Ensign of the Bahamas.svg|Civiližiden astjoiden flag
-Civil Jack of the Bahamas.svg|Civiližiden astjoiden güis
+<gallery mode="packed" heights="125px">
 Naval Ensign of the Bahamas.svg|Sodameriflag
 Government Ensign of the Bahamas.svg|Sodamerivägiden abuastjoiden flag
+Civil Ensign of the Bahamas.svg|Civiližiden astjoiden flag
+Civil Jack of the Bahamas.svg|Civiližiden astjoiden güis
 </gallery>
 
 == Kacu mugažo ==
