--- a/Kaclim.mw
+++ b/Kaclim.mw
@@ -4,7 +4,12 @@
 {{Legend|#37C837|[[Google Chrome]]}}
 {{Legend|#FF6600|[[Mozilla Firefox]]}}
 {{Legend|#FF2A2A|[[Opera]]}} ]]
-'''Kaclim''' vai '''Brauzer''' om specialine [[kompjuterine program]] kacumha [[sait|vebsaitid]].
+'''Kaclim''' vai '''Brauzer''' ({{lang-en|web browser}}
+ [wɛb ˈbraʊ.zə(ɹ), -zɚ]), vai '''veb-ümbrikacui''', om specialine [[kompjuterine program]] kacumha [[sait|vebsaitid]], vebdokumentoiden südäiolendad, kompjuterfailid da niiden katalogoid, mugažo ohjastamha vebližaprogrammid.
+
+[[Mail'man hämähoukunverk|Globaližes verkos]] kävutadas kaclimid neniden tegendoiden täht vebsaitiden südäiolendanke: ezipakitoituz, ümbriradmine, manipuliruind, kuvastuz.
+
+Kaclimed i niiden kävutand oma maksutomad tobjimalaz. Todas niid [[operacine sistem|operaciisistemanke]] vai eriži.
 
 {{stub}}
 [[Kategorii:Kaclimed| ]]
