--- a/Viborg_(Danii).mw
+++ b/Viborg_(Danii).mw
@@ -5,18 +5,22 @@
  | Lidnanznam text = Viborgan lidnanznam (Danii)
  | Flag text = 
  | Valdkund = Danii
- | Eläjiden lugu = 94,393
- | Voz' = 2013
- | Pind = 1474.05
+ | Eläjiden lugu = 41,079
+ | Voz' = 2021
+ | Pind = 25,2
  | Fail = Viborg Domkirke (1).JPG
- | Pämez' = Ul'rik Vil'bek<br/>(''Ulrik Wilbek'',<br/>viluku 2018—)
+ | Pämez' = Ul'rik Vil'bek<br/>(viluku 2018—,<br/>''Ulrik Wilbek'')
  | Telefonkod = +45-8
  | Aigvö = tal'vel [[UTC]]+1,<br/>kezal [[UTC]]+2
 }}
 {{Znamoičendad|Viborg}}
-'''Viborg''' om lidn [[Danii|Danijan]] pohjoižes.
+'''Viborg''' (mugažo [[danijan kel'|danijan kelel]], virktas [ˈviˌpɒˀ]) om lidn [[Danii|Danijan]] pohjoižes. Se om [[Keskjutlandii]]-agjan administrativine keskuz.
 
-Vl 2013 lidnan eläjiden lugu oli 94 393 ristitud.
+Eländpunkt om kaikiš amuižembišpäi Danijas, päjumalanpertin aluz om pandud 12. voz'sadal.
+
+Lidn sijadase agjan pohjoižes, 51 m ü.m.t. keskmäižel korktusel.
+
+Vl 2013 Viborgan kundan eläjiden lugu oli 94 393 ristitud 1470 km² pindal.
 
 == Sebruzlidnad ==
 * {{FIN|#}} [[Porvoo]], [[Suomenma]]
@@ -37,3 +41,4 @@ Vl 2013 lidnan eläjiden lugu oli 94 393 ristitud.
 {{stub}}
 [[Kategorii:Danijan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
+[[Kategorii:Keskjutlandii|*]]
