--- a/Viborg_(Danii).mw
+++ b/Viborg_(Danii).mw
@@ -16,11 +16,11 @@
 {{Znamoičendad|Viborg}}
 '''Viborg''' (mugažo [[danijan kel'|danijan kelel]], virktas [ˈviˌpɒˀ]) om lidn [[Danii|Danijan]] pohjoižes. Se om [[Keskjutlandii]]-agjan administrativine keskuz.
 
-Eländpunkt om kaikiš amuižembišpäi Danijas, päjumalanpertin aluz om pandud 12. voz'sadal.
+Eländpunkt om kaikiš amuižembišpäi Danijas, mainitase 8. voz'sadaspäi, päjumalanpertin aluz om pandud 12. voz'sadal.
 
 Lidn sijadase agjan pohjoižes, 51 m ü.m.t. keskmäižel korktusel.
 
-Vl 2013 Viborgan kundan eläjiden lugu oli 94 393 ristitud 1470 km² pindal.
+Vl 2016 Viborgan kundan eläjiden lugu oli 95 776 ristitud 1474 km² pindal.
 
 == Sebruzlidnad ==
 * {{FIN|#}} [[Porvoo]], [[Suomenma]]
