--- a/Viborg_(Danii).mw
+++ b/Viborg_(Danii).mw
@@ -16,8 +16,14 @@
 {{Znamoičendad|Viborg}}
 '''Viborg''' (mugažo [[danijan kel'|danijan kelel]], virktas [ˈviˌpɒˀ]) om lidn [[Danii|Danijan]] pohjoižes. Se om [[Keskjutlandii]]-agjan administrativine keskuz.
 
-Eländpunkt om kaikiš amuižembišpäi Danijas, mainitase 8. voz'sadaspäi, päjumalanpertin aluz om pandud 12. voz'sadal.
+== Istorii ==
+Eländpunkt om kaikiš amuižembišpäi Danijas, mainitase 8. voz'sadaspäi kut [[vikingad|vikingoiden]] žilo. Lidnan nimituz libub amuižskandinavijan kelespäi i kogoneb kahtes palaspäi: ''[[ve (pühäsija)|vé]]'' «pühäsija» i ''borg'' «lidnuz».
 
+Danijan kaikiš amuižemb opendusen aluzkund radab lidnas, se om Viborgan kafedraline škol ({{lang-da|Viborg Katedralskole}}), vspäi 1060. Päjumalanpertin aluz om pandud 12. voz'sadal.
+
+Viborg-raudtestancii om avaitud vl 1863.
+
+== Geografijan andmused ==
 Lidn sijadase agjan pohjoižes, 51 m ü.m.t. keskmäižel korktusel.
 
 Vl 2016 Viborgan kundan eläjiden lugu oli 95 776 ristitud 1474 km² pindal.
