*Empty MediaWiki Message*

--- a/Viborg_(Danii).mw
+++ b/Viborg_(Danii).mw
@@ -17,7 +17,7 @@
 '''Viborg''' (mugažo [[danijan kel'|danijan kelel]], virktas [ˈviˌpɒˀ]) om lidn [[Danii|Danijan]] pohjoižes. Se om [[Keskjutlandii]]-agjan administrativine keskuz.
 
 == Istorii ==
-Eländpunkt om kaikiš amuižembišpäi Danijas, mainitase 8. voz'sadaspäi kut [[vikingad|vikingoiden]] žilo. Lidnan nimituz libub amuižskandinavijan kelespäi i kogoneb kahtes palaspäi: ''[[ve (pühäsija)|vé]]'' «pühäsija» i ''borg'' «lidnuz».
+Eländpunkt om kaikiš amuižembišpäi Danijas, mainitase 8. voz'sadan lopuspäi kut [[vikingad|vikingoiden]] žilo. Lidnan nimituz libub amuižskandinavijan kelespäi i kogoneb kahtes palaspäi: ''[[ve (pühäsija)|vé]]'' «pühäsija» i ''borg'' «lidnuz».
 
 Danijan kaikiš amuižemb opendusen aluzkund radab lidnas, se om Viborgan kafedraline škol ({{lang-da|Viborg Katedralskole}}), vspäi 1060. Päjumalanpertin aluz om pandud 12. voz'sadal.
 
@@ -33,7 +33,7 @@ Vl 2016 Viborgan kundan eläjiden lugu oli 95 776 ristitud 1474 km² pindal.
 * {{ISL|#}} [[Dal'vik]], [[Islandii]]
 * {{NOR|#}} [[Hamar]], [[Norvegii]]
 * {{SWE|#}} [[Lund]], [[Ročinma]]
-* {{GER|#}} [[Lüneburg]], [[Alasaksonii]]-federacijanma, [[Saksanma]]
+* {{GER|#}} [[Lüneburg]], [[Alasaksonii]]-federacijanma, [[Saksanma]] (vspäi 1992)
 * {{HUN|#}} [[Kečkemet]], [[Mad'jaranma]]
 * {{LTU|#}} [[Marijampole]], [[Litvanma]]
 
