--- a/Ičan.mw
+++ b/Ičan.mw
@@ -15,6 +15,10 @@
 }}
 '''Ičan''' ({{lang-zh|宜昌市}}, [[pin'jin']]: ''Yíchāng'') om [[Kitai]]n lidn [[Hubei]]-agjas. Se om agjan kahtenz' lidn eläjiden lugun mödhe ([[Uhan']]-pälidnan jäl'ghe).
 
+== Istorii ==
+Eländpunkt om erigoittud lidnan statusanke Ičan-makundaspäi Kitain Rahvahaližen Tazovaldkundan sädandan jäl'ghe vl 1949. [[Ičanan lidnümbrik]] om sätud vl 1992.
+
+== Geografijan andmused ==
 Lidn sijadase [[Janczi]]-jogen hural randal tobjimalaz. Kaks' järedad padoseinäd da gidroelektrostancijad oma saudud ülezjogen: «Gečžouba» (om saudud vozil 1971−1988) ani lidnan pohjoižen röunan taga i kaikiš suremb mail'mas vägevuden mödhe «San'sä» (''Koume urad'', 22,5 GVt, om saudud vll 1994−2012) 50 kilometras lodeheze Ičan-lidnaspäi.
 
 Vl 2010 Ičanan lidnümbrikon eläjiden lugu oli 4 059 686 ristitud 21 338 km² pindal.
