--- a/Ičan.mw
+++ b/Ičan.mw
@@ -18,6 +18,8 @@
 == Istorii ==
 Eländpunkt om erigoittud lidnan statusanke Ičan-makundaspäi Kitain Rahvahaližen Tazovaldkundan sädandan jäl'ghe vl 1949. [[Ičanan lidnümbrik]] om sätud vl 1992.
 
+Ičan Sansä-lendimport om saudud lidnan suves vll 1994−1996.
+
 == Geografijan andmused ==
 Lidn sijadase [[Janczi]]-jogen hural randal tobjimalaz. Kaks' järedad padoseinäd da gidroelektrostancijad oma saudud ülezjogen: «Gečžouba» (om saudud vozil 1971−1988) ani lidnan pohjoižen röunan taga i kaikiš suremb mail'mas vägevuden mödhe «San'sä» (''Koume urad'', 22,5 GVt, om saudud vll 1994−2012) 50 kilometras lodeheze Ičan-lidnaspäi.
 
