*Empty MediaWiki Message*

--- a/Ostrovnoi.mw
+++ b/Ostrovnoi.mw
@@ -1,9 +1,9 @@
 {{Eländpunkt
  | Nimi = Ostrovnoi<br />Островной
  | Lidnanznam = Ostrovnoj gerb.png
- | Flag = 
+ | Flag =
  | Lidnanznam text = Ostrovnoin lidnanznam
- | Flag text = 
+ | Flag text =
  | Valdkund = Venäma
  | Eläjiden lugu = 1,847
  | Voz' = 2018
@@ -16,7 +16,7 @@
 }}
 '''Ostrovnoi''' ({{lang-ru|Островной}}, {{lang-uk|Островний}}) om [[Venäma]]n [[sauptud administrativiž-territorialine ühtnik|sauptud]] lidn [[Murmanskan agj]]an päivnouzmas. Se om lidnümbrikon alištunudenke territorijanke administrativine keskuz.
 
-[[Venäman Pohjoine laivišt|Pohjoižen laivišton]] Gremih-sodabaz sijadase 2 kilometras lidnaspäi.
+[[Venäman Pohjoine laivišt|Pohjoižen laivišton]] Gremih-sodabaz sijadase kahtes kilometras lidnaspäi.
 
 == Istorii ==
 Eländpunkt mainitase ezmäižen kerdan vn 1611 17. päiväl sügüz'kud kuti [[saamalaižed|saamalaižiden]] ''Jokan'gan pagast'' ({{lang-ru|Йоканьгский погост}}), nimi sündui jogen mödhe. Vozil 1920−1938 nimitihe sidä ''Jokan'gan žiloks'' ({{lang-ru|село Йоканьга}}), sid' ''Gremih-žiloks'' ({{lang-ru|посёлок Гремиха}}). Vll 1930−1962 žilo oli agjan Saamen rajonan administrativižeks keskuseks.
