*Empty MediaWiki Message*

--- a/Hüvinkä.mw
+++ b/Hüvinkä.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Hüvinkä<br />Hyvinkää <small>(suom.)</small><br />Hyvinge <small>(roč.)</small>
- | Lidnanznam = Hyvinkaa.vaakuna.svg{{!}}link=Hüvinkän lidnanznam
+ | Lidnanznam = Hyvinkaa.vaakuna.svg
  | Flag = Hyvinkää.lippu.svg
  | Lidnanznam text = Hüvinkän lidnanznam
  | Flag text = Hüvinkän flag
@@ -26,7 +26,7 @@ Lidn sijadase 100 m ü.m.t. keskmäižel korktusel. Matkad [[Hel'sinki]]n keskus
 Vl 2018 lidnan kogonaine pind oli 336,77 km², sidä kesken kuiv ma — 322,68 nellikkilometrad, sokaz ma — 14,09 km².
 
 == Eläjad ==
-Vl 2015 eläjiden lugu oli 46 509 ristitud. Kaikiš suremb ristitišt om nügüd'.
+Vl 2015 eläjiden lugu oli 46 509 ristitud. Kaikiš suremb lidnan ristitišt om nügüd'.
 
 Mamankelen mödhe (2016): suomen kel' — 93,9%, ročin kel' — 0,8%, toižed keled — 5,3%.
 
