--- a/Gorna_Orähovic.mw
+++ b/Gorna_Orähovic.mw
@@ -15,10 +15,14 @@
 }}
 '''Gorna Orähovic''' ({{lang-bg|Горна Оряховица}}) om lidn [[Bolgarii|Bolgarijan]] keskuzpalan pohjoižes. Mülüb [[Veliko Tirnovon agj]]aha.
 
-Vl 1899 saudihe raudtestancijad lidnas. Nügüd'aigan se om järed raudtesol'm.
+== Istorii ==
+Rahovec-lidnuz oli saudud keskaigan varjoičemha Tarnovgradad nell' kilometrad lodeheze nügüdläižes lidnaspäi. Lidnuz om pandud mantazole Ottomanan imperijan aigan.
 
-Gorna Orähovic šingotase saharantegimil i mašiništon pästandal (elektro-, varažomtehnik i libutimed, transformerad).
+Tahondan ekonomine šingotez zavodihe sijaližel torguindal 19. voz'sadal. Gorna Orähovic sai lidnan statusad vl 1870, sil aigal eländpunktas eli 4700 ristitud, oli 1200 pertid da viž jumalanpertid. Vl 1899 saudihe raudtestancijad lidnas. Nügüd'aigan se om järed raudtesol'm.
 
+Gorna Orähovic šingotase [[sahar (produkt)|saharantegimil]] i mašiništon pästandal (elektro-, varažomtehnik i libutimed, [[transformer]]ad).
+
+== Geografijan andmused ==
 Lidn sijadase agjan keskuzpalas, 218 m ü.m.t. keskmäižel korktusel.
 
 Vl 2010 eläjiden lugu oli 32 436 ristitud. Kaikiš suremb lidnan ristitišt oli 40 890 eläjad vl 1985.
@@ -30,7 +34,6 @@ Vl 2010 eläjiden lugu oli 32 436 ristitud. Kaikiš suremb lidnan ristitišt oli
 * [http://g-oryahovica.org/ Lidnankundan oficialine sait (''g-oryahovica.org'').] {{ref-bg}}
 {{Commons|Category:Gorna Oryahovitsa}}
 
-{{stub}}
 [[Kategorii:Bolgarijan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 [[Kategorii:Veliko Tirnovon agj]]
