*Empty MediaWiki Message*

--- a/Gorna_Orähovic.mw
+++ b/Gorna_Orähovic.mw
@@ -16,7 +16,7 @@
 '''Gorna Orähovic''' ({{lang-bg|Горна Оряховица}}) om lidn [[Bolgarii|Bolgarijan]] keskuzpalan pohjoižes. Mülüb [[Veliko Tirnovon agj]]aha.
 
 == Istorii ==
-Rahovec-lidnuz oli saudud keskaigan varjoičemha Tarnovgradad nell' kilometrad lodeheze nügüdläižes lidnaspäi. Lidnuz om pandud mantazole Ottomanan imperijan aigan.
+Rahovec-lidnuz oli saudud keskaigan nell' kilometrad lodeheze nügüdläižes lidnaspäi varjoičemha carin Tarnovgrad-pälidnad. Lidnuz om pandud mantazole Ottomanan imperijan aigan.
 
 Tahondan ekonomine šingotez zavodihe sijaližel torguindal 19. voz'sadal. Gorna Orähovic sai lidnan statusad vl 1870, sil aigal eländpunktas eli 4700 ristitud, oli 1200 pertid da viž jumalanpertid. Vl 1899 saudihe raudtestancijad lidnas. Nügüd'aigan se om järed raudtesol'm.
 
